# lite.ai.toolkit

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README.zh.md  TODOLIST.md  build.sh  lite.ai-cmd.cmake  lite.ai.cmake  lite.ai.hub.onnx.md  litehub-command.cmake  litehub-mnn.cmake  litehub-ncnn.cmake  litehub-onnxruntime.cmake  litehub-tnn.cmake  litehub.cmake  requirements.txt  setup_3rdparty.cmake
.github/workflows/: issue.yml
MNN/: Tensor.hpp
cmake/: MNN.cmake  TNN.cmake  command.cmake  lite.ai-cmd.cmake  lite.ai-mnn.cmake  lite.ai-ncnn.cmake  lite.ai-onnxruntime.cmake  lite.ai-tnn.cmake  lite.ai.toolkit-cmd.cmake  lite.ai.toolkit-config.cmake  lite.ai.toolkit-mnn.cmake  lite.ai.toolkit-ncnn.cmake  lite.ai.toolkit-onnxruntime.cmake  lite.ai.toolkit-platform.cmake  lite.ai.toolkit-tnn.cmake  lite.ai.toolkit.cmake  lite.ai.toolkit.cmake.in  models.cmake  ncnn.cmake  onnxruntime.cmake  opencv.cmake  platform.cmake  setup_3rdparty.cmake  setup_opencv_libs.cmake  tensorrt.cmake  utils.cmake
docs/: onnxruntime-mac-x86_64-build-cn.md  opencv-mac-x86_64-build-cn.md  ort_build.md  ort_handler.md  ort_subpixel_cnn.md  ort_usage.md
docs/api/: api.default.md  api.onnxruntime.md  default.md  onnxruntime.md
docs/contrib/: CONTRIBUTING.zh.md
docs/hub/: lite.ai.hub.mnn.md  lite.ai.hub.onnx.md  lite.ai.toolkit.hub.mnn.md  lite.ai.toolkit.hub.ncnn.md  lite.ai.toolkit.hub.onnx.md  lite.ai.toolkit.hub.tnn.md
docs/ort/: ort_colorizer-cn.md  ort_colorizer.zh.md  ort_deeplabv3_resnet101.zh.md  ort_densenet121.zh.md  ort_efficientdet.zh.md  ort_fcn_resnet101.zh.md  ort_ghostnet.zh.md  ort_handler.md  ort_handler.zh.md  ort_hardnet.zh.md  ort_ibnnet.zh.md  ort_mobilenetv2.zh.md  ort_nanodet.zh.md  ort_resnet.zh.md  ort_resnext.zh.md  ort_ssrnet-cn.md  ort_ssrnet.md  ort_ssrnet.zh.md  ort_subpixel_cnn-cn.md  (+8 more)
examples/lite/: CMakeLists.txt  add_lite_executable.cmake
examples/lite/cv/: test_lite_age_googlenet.cmake  test_lite_age_googlenet.cpp  test_lite_arcface_resnet.cpp  test_lite_backgroundmattingv2.cpp  test_lite_backgroundmattingv2_dyn.cpp  test_lite_cava_combined_face.cpp  test_lite_cava_ghost_arcface.cpp  test_lite_center_loss_face.cpp  test_lite_colorizer.cpp  test_lite_deeplabv3_resnet101.cpp  test_lite_densenet.cpp  test_lite_docunwarp.cpp  test_lite_efficient_emotion7.cpp  test_lite_efficient_emotion8.cpp  test_lite_efficientdet.cpp  test_lite_efficientdet_d7.cpp  test_lite_efficientdet_d8.cpp  test_lite_efficientnet_lite4.cpp  test_lite_emotion_ferplus.cpp  test_lite_face_68landmarks.cpp  test_lite_face_hair_seg.cpp  test_lite_face_landmarks_1000.cpp  test_lite_face_parsing_bisenet.cpp  test_lite_face_parsing_bisenet_dyn.cpp  test_lite_face_recognizer.cpp  test_lite_face_restoration.cpp  test_lite_face_swap.cpp  test_lite_faceboxes.cpp  test_lite_faceboxesv2.cpp  test_lite_facefusion_pipeline.cpp  test_lite_facemesh.cpp  test_lite_facenet.cpp  test_lite_fast_portrait_seg.cpp  test_lite_fast_style_transfer.cpp  test_lite_fcn_resnet101.cpp  test_lite_female_photo2cartoon.cpp  test_lite_focal_arcface.cpp  test_lite_focal_asia_arcface.cpp  test_lite_fsanet.cpp  test_lite_gender_googlenet.cpp  (+79 more)
examples/lite/resources/: .gitignore  model_matrix.npy
examples/lite/sd/: test_lite_clip.cpp  test_lite_sd_pipeline.cpp
examples/ort/: .gitignore  CMakeLists.txt  add_ort_executable.cmake
examples/ort/cv/: test_ortcv_age_googlenet.cmake  test_ortcv_age_googlenet.cpp  test_ortcv_arcface_resnet.cmake  test_ortcv_arcface_resnet.cpp  test_ortcv_colorizer.cmake  test_ortcv_colorizer.cpp  test_ortcv_deeplabv3_resnet101.cmake  test_ortcv_deeplabv3_resnet101.cpp  test_ortcv_densenet.cmake  test_ortcv_densenet.cpp  test_ortcv_efficientnet_lite4.cmake  test_ortcv_efficientnet_lite4.cpp  test_ortcv_emotion_ferplus.cmake  test_ortcv_emotion_ferplus.cpp  test_ortcv_fast_style_transfer.cmake  test_ortcv_fast_style_transfer.cpp  test_ortcv_fcn_resnet101.cmake  test_ortcv_fcn_resnet101.cpp  test_ortcv_fsanet.cmake  test_ortcv_fsanet.cpp  test_ortcv_gender_googlenet.cmake  test_ortcv_gender_googlenet.cpp  test_ortcv_ghostnet.cmake  test_ortcv_ghostnet.cpp  test_ortcv_glint_arcface.cpp  test_ortcv_hardnet.cmake  test_ortcv_hardnet.cpp  test_ortcv_ibnnet.cmake  test_ortcv_ibnnet.cpp  test_ortcv_mobilenetv2.cmake  test_ortcv_mobilenetv2.cpp  test_ortcv_pfld.cmake  test_ortcv_pfld.cpp  test_ortcv_resnet.cmake  test_ortcv_resnet.cpp  test_ortcv_resnext.cmake  test_ortcv_resnext.cpp  test_ortcv_shufflenetv2.cmake  test_ortcv_shufflenetv2.cpp  test_ortcv_ssd.cmake  (+22 more)
java/: README.md
lib/: .gitignore  libMNN.dylib  libncnn.1.0.21.10.07.dylib  libopencv_core.dylib  libopencv_features2d.dylib  libopencv_flann.4.5.dylib  libopencv_ml.4.5.dylib  libopencv_stitching.4.5.dylib
lite/: backend.h  config.h  config.h.in  constants.h  lite.ai.defs.h  lite.ai.headers.h  lite.cpp  lite.h  models.h  pipeline.h  types.h  utils.cpp  utils.h
logs/: .gitignore
ncnn/: CMakeLists.txt  net.h
opencv2/: opencv.hpp
ort/: CMakeLists.txt  lite_ort.cpp  lite_ort.h
ort/core/: __ort_core.h  ort_config.h  ort_core.cpp  ort_core.h  ort_defs.h  ort_handler.cpp  ort_handler.h  ort_types.h  ort_utils.cpp  ort_utils.h
ort/cv/: age_googlenet.cpp  age_googlenet.h  arcafce_resnet.h  arcface_resnet.cpp  arcface_resnet.h  cava_combined_face.cpp  cava_combined_face.h  cava_ghost_arcface.cpp  cava_ghost_arcface.h  center_loss_face.cpp  center_loss_face.h  chinese_ocr.cpp  chinese_ocr.h  colorizer.cpp  colorizer.h  deeplabv3_resnet101.cpp  deeplabv3_resnet101.h  densenet.cpp  densenet.h  efficient_emotion7.cpp  efficient_emotion7.h  efficient_emotion8.cpp  efficient_emotion8.h  efficientdet.cpp  efficientdet.h  efficientdet_d7.cpp  efficientdet_d7.h  efficientdet_d8.cpp  efficientdet_d8.h  efficientnet_lite4.cpp  efficientnet_lite4.h  emotion_ferplus.cpp  emotion_ferplus.h  emotion_ferplus7.h  emotion_ferplus8.cpp  emotion_ferplus8.h  face_landmarks_1000.cpp  face_landmarks_1000.h  faceboxes.cpp  faceboxes.h  (+106 more)
pylitex/: .gitignore  MANIFEST.in  setup.py
python/: README.md  requirements.txt  setup.cfg  setup.py
tnn/: version.h
(+888 files in other folders)
